Adjust the way we handle footer labels to avoid them stretching across the entire width of the tongue box.

--- a/pages/css/gwt.css
+++ b/pages/css/gwt.css
@@ -473,7 +473,6 @@ img, embed, applet, object {
 .tongueBox .Footer {
   font-size: 12px;
   padding: 0px 10px 10px 0px;
-  text-align: right;
 }
 
 .formPanel td {
